--- a/Additional_files/shiny.css
+++ b/Additional_files/shiny.css
@@ -18,3 +18,17 @@ html, body{
 .popup{
   margin: 100px;
 }
+
+.navbar-default {
+  background-color: #85C1E9;
+}
+
+.navbar-default .navbar-brand {
+  color: white;
+}
+
+.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
+    color: white;
+    background-color: #2874A6;
+}
+
